Fix design bug: Flex columns will collapse when needed

--- a/app/assets/stylesheets/application/components/section-block.scss
+++ b/app/assets/stylesheets/application/components/section-block.scss
@@ -15,6 +15,7 @@
     flex-basis: 40%;
     flex-grow: 1;
     max-width: 90%;
+    min-width: 350px;
     padding: 2em;
 
     &.zero-padding {
